crates/dsrs-macros/tests/ui/render_duplicate.stderr
error: #[render] can only be specified once per field
 --> tests/ui/render_duplicate.rs:7:5
  |
7 |     #[render(jinja = "{{ this }}")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
